--- a/src/components/PathfindingVisualizer.scss
+++ b/src/components/PathfindingVisualizer.scss
@@ -1,5 +1,5 @@
 .grid {
-  margin: 25px 0 0;
+  margin: 0;
 }
 .grid-row {
   margin-bottom: 0;
